<resources>
    <string name="app_name">RxJavaTasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="network_request">Network Request</string>
    <string name="timer">Timer</string>
    <string name="Recycler">Recycler</string>
    <string name="edit_text">Edit text</string>
    <string name="two_servers">Two servers</string>
    <string name="characters">Всего персонажей: %1$s</string>
    <string name="position_characters">Позиция персонажа: %1$s</string>
    <string name="text_hint">Введите текст</string>
</resources>