<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".tasks2.other.MainFragment">

    <Button
        android:id="@+id/networkRequest"
        android:layout_gravity="center"
        android:text="@string/network_request"
        android:layout_width="180dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/timer"
        android:layout_gravity="center"
        android:text="@string/timer"
        android:layout_width="180dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/recycler"
        android:layout_gravity="center"
        android:text="@string/Recycler"
        android:layout_width="180dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/editText"
        android:layout_gravity="center"
        android:text="@string/edit_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/twoServers"
        android:layout_gravity="center"
        android:text="@string/two_servers"
        android:layout_width="180dp"
        android:layout_height="wrap_content" />

</LinearLayout>